fix: spacing for pages

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@
 .page {
   padding-top: 40px;
   height: 100%;
-  width: 80vw;
+  width: 80%;
   margin: 0 auto;
 }
 
